css/custom.css
/*
Custom CSS by AriaRay Brown, Cam Brown, Sydney Bertrand 
Updated: 4-2019
*/

@import url("reset.css");
@import url("outline.css");
@import url("sydney.css");
@import url("cam.css");
@import url("ariaray.css");

@import url('https://fonts.googleapis.com/css?family=Cormorant+Unicase|Neucha|Patrick+Hand|Poppins|Roboto+Condensed|Ubuntu|Slabo+27px');

/***************/
/* MAIN LAYOUT */
/***************/

*, ::after, ::before {
    box-sizing: border-box;
}

a {

}

body {  
    line-height: 1.25;
    font-family: Poppins;
}

.boxShadow {
    
}

footer {
    color: rgba(0,0,0,.5);
    clear: left;
    padding: 2em;
    width: 100%;    
}

h1 {  

}
h2 {

}

h3 {

}

h4 {

}

li {

}

ol {

}

p {
    line-height: 1.5;
}

.textShadow {
    
}

ul {

}

/****************/
/* ABOUT LAYOUT */
/****************/


/******************/
/* GALLERY LAYOUT */
/******************/

